--- a/rentiki_app/package.json
+++ b/rentiki_app/package.json
@@ -24,6 +24,7 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
+    "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage-angular": "^3.0.6",
     "rxjs": "~6.6.0",
